@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-27T08:21:10Z",
+  "timestamp" : "2022-10-27T16:25:33Z",
   "count_outdated" : 600,
   "uniques_outdated" : 343,
-  "count" : 647,
+  "count" : 646,
   "uniques" : 370,
   "clones" : [
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
