@@ -1,3 +1,11 @@
+2022-10-27T16:25:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3339159633 # 974
+* notice: last 14d: unq all: 13 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 343 600 / 370 647
+* notice: next accum: outdated-unq outdated-all / unq all: 343 600 / 370 646
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-10-13]
+
 2022-10-27T08:21:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3335710726 # 973
 * notice: last 14d: unq all: 13 47
